# jangle

./: .gitignore  README.md  flake.nix  my_project.cabal
app/: Main.hs
app/Drivers/: Cli.hs
src/: Import.hs  Jangle.hs  Types.hs
src/Problems/: All.hs
src/Problems/Generator/: GenerateAll.hs  generate_all.mustache.hs
