name:           jangle
version:        0.0.1
cabal-version:  1.12
build-type:     Simple

library jangle-lib
  exposed-modules:
    Jangle
    Import
    Types
    Problems.All
  default-extensions:
    ImportQualifiedPost
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base ==4.*,
    rio,
    directory,
    mustache,
    http-client,
    http-client-tls,
    http-types

executable jangle-exe
  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
    Paths_jangle
    Drivers.Cli
  build-depends:
    jangle-lib,
    base ==4.*,
    optparse-simple,
    rio
  default-language: Haskell2010

Test-Suite jangle-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-extensions:
    NoImplicitPrelude
  build-depends:
    jangle-lib,
    base ==4.*,
    hspec,
    hspec-discover
